--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -31,6 +31,57 @@
         <img class="img-fluid mb-5 d-block mx-auto" src="../assets/phenix1.jpg" alt="">
         <h1 class="text-uppercase mb-0">Dev Phenix</h1>
         <hr class="star-light">
-        <h2 class="font-weight-light mb-0">Developpeur Web/Logiciel/Mobile</h2>
+
     </div>
 </header>
+<div class="container">
+    <div class="listArticle" *ngIf="!editing">
+        <div class="article" *ngFor="let article of articles">
+            <h2>{{ article?.title }}</h2>
+            <p>{{ article?.description }}</p>
+            <p>{{article?.author}}</p>
+        </div>
+        <button class="btn btn-info" (click)="addArticle()">Ajouter un article</button>
+    </div>
+    <div class="container-fluid bg-light py-3" *ngIf="editing">
+        <form id="contact-form" method="post" action="contact.php"(ngSubmit)="saveArticle(myForm)" #myForm="ngForm">
+
+            <div class="messages"></div>
+            <div class="controls">
+                <div class="row">
+                    <div class="col-sm-4">
+                        <div class="form-group">
+                            <label for="form_title">Title *</label>
+                            <input id="form_title" type="text" name="title" [(ngModel)]="editArticle.title" class="form-control" placeholder="Please enter a title *" required>
+                        </div>
+                    </div>
+                    <div class="col-sm-4">
+                        <div class="form-group">
+                            <label for="form_author">Author *</label>
+                            <input id="form_author" name="author" [(ngModel)]="editArticle.author" class="form-control" placeholder="Please enter your name *" required="required">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="clearfix"></div>
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="form-group">
+                        <label for="form_descr">Description *</label>
+                        <textarea id="form_descr" name="description" [(ngModel)]="editArticle.description"class="form-control" placeholder="Type your article content here..." rows="4" required></textarea>
+                        <div class="help-block with-errors"></div>
+                    </div>
+                </div>
+                <div class="col-md-12">
+                    <input type="submit" class="btn btn-success btn-send" value="Add&Continue">
+                    <input type="submit" (click)="backToList()" class="btn btn-success btn-send" value="Publish">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12">
+                    <p class="text-muted"><strong>*</strong> These fields are required.</p>
+                </div>
+            </div>
+        </form>
+    </div>
+</div>
